Users can add a site and its name and it will be stored in their sync storage

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,11 +4,14 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "permissions": [
-    "tabs"
+    "tabs",
+    "storage"
   ],
+  "background": {
+    "service_worker": "./js/background.js"
+  },
   "host_permissions": [
-    "http://*/*",
-    "https://*/*"
+    "*://*/*"
   ],
   "action": {
     "default_popup": "html/main.html"
