--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,8 @@
   "manifest_version": 3,
   "permissions": [
     "tabs",
-    "storage"
+    "storage",
+    "alarms"
   ],
   "background": {
     "service_worker": "./js/background.js"
